all data updated

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Space Portfolio - Orbital Career Display</title>
+    <title>Avi's Universe</title>
     <meta name="description" content="Interactive space-themed portfolio showcasing education, work experience, projects, volunteering, and content creation" />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="Avinash Nair" />
 
     <meta property="og:title" content="orbital-career-display" />
     <meta property="og:description" content="Lovable Generated Project" />
@@ -17,7 +17,7 @@
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
-  <body>
+  <body> 
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
